--- a/src/pages/dashboard/Dashboard.css
+++ b/src/pages/dashboard/Dashboard.css
@@ -1,5 +1,41 @@
 #dashboard_container {
-    width: 1000px;
-    height: 1000px;
-    background-color: white;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+#search-container {
+margin-top: 30px;
+background-color: white;
+width: max-content;
+border-radius: 10px;
+}
+
+#search-container input {
+    border-radius: 10px;
+    align-self: center;
+    justify-self: center;
+
+    width: 500px;
+}
+
+@media(max-width:600px ) {
+    #search-container {
+        width: 300px;
+        }
+        
+        #search-container input {
+            width: 300px;
+        }
+}
+@media(max-width:300px ) {
+    #search-container {
+        width: 230px;
+        }
+        
+        #search-container input {
+            width: 230px;
+        }
 }
