--- a/src/pages/profile/BusinessPage.css
+++ b/src/pages/profile/BusinessPage.css
@@ -1,47 +1,65 @@
-#page_container {
+#business-page {
     display: flex;
+    justify-content: center;
+    align-items: center;
+    color: var(--mainTextColor);
+}
+#business-button {
+    align-self: center;
+    justify-self: center;
+    height: 50px;
+    width: 300px;
 }
 
-#business_left {
+#business-page ul {
+    margin-top: 20px;
+}
+#business-page li {
+    margin-top: 2px;
+    letter-spacing: 0.1rem;
+}
+
+#business-main {
     display:flex;
     flex-direction: column;
-    width: 40%;
+    width: 500px;
+    height: 500px;
+    border-radius: 100%;
+    justify-content: center;
+    align-items: center;
+    border: 5px solid var(--mainTextColor);
+    box-shadow: 4px 4px 5px 0px var(--mainTextColor);
+    text-align: center;
+    
 }
 
-#business_left img {
-    align-self: center;
-    margin-right: 20px;
+#business-main h2 {
+    font-size: 2em;
+    letter-spacing: 0.2rem;
+}
+#business-main:hover {
+    box-shadow: 10px 5px 5px rgb(193, 29, 29);
+    margin-left: -10px;
+    margin-right: 10px;
 }
 
-#business_right {
+#business-main img {
+    width: 100px;
+    height: 100px;
+    border-radius: 100%;
+}
+
+/* #business-right {
     display:flex;
     flex-direction: column;
-    width: 60%;
+    width: 70%;
 }
 
-#business_left button{
-    width: 30%;
-    align-self: center;
-}
-#business_left label {
-    display: flex;
-}
 
-#business_left span{
-    align-self: center;
-}
-#icon{
-    padding-left: 20px;
-    border-radius: none;
-    box-shadow: none;
-    width: 30px;
-    height: 30px;
-}
 
 #description {
-    background-color: aliceblue;
     width: 100%;
-    height: max-content;
+    height: 100%;
     border-radius:  10px;
     text-align: center;
     display: flex;
@@ -49,8 +67,62 @@
     justify-content: center;
 }
 
+#description h3{
+    font-size: 2em;
+} */
+
 #button-div{
-    margin-top: 50px;
+    display:flex;
     align-self: center;
 
   }
+
+  #button-div button{
+    margin: 40px 20px;
+  }
+
+  @media (max-width: 700px) {
+    #business-main {
+        height: 300px;
+        width: 300px;
+    }
+  }
+
+  @media (max-width: 400px){
+    #business-main {
+        border-radius: 10px;
+        border: 3px solid var(--mainTextColor);
+        height:100%;
+        width: 100%;
+    }
+    #business-main h2 {
+        font-size: 1em;
+        letter-spacing: 0.2rem;
+    }
+    #business-main span {
+        font-size: 1em;
+        letter-spacing: 0rem;
+    }
+    #business-main:hover {
+        box-shadow: 10px 5px 5px rgb(193, 29, 29);
+        margin-left: -10px;
+        margin-right: 10px;
+    }
+    
+    #business-main img {
+        width: 80px;
+        height: 80px;
+    }
+    #Avatar img {
+        height: 150px;
+        width: 150px;
+    }
+    #button-div{
+        display:flex;
+        flex-direction: column;
+        align-items: center;
+    
+      }
+    
+  }
+  
