--- a/src/pages/signup/Signup.css
+++ b/src/pages/signup/Signup.css
@@ -8,17 +8,9 @@
     padding: 40px;
     border: 1px solid #ddd;
     box-shadow: 3px 3px 5px rgba(0, 0 , 0, 0.05);
-}
+    z-index: -1;
+  }
 
-.signup-container input {
-    padding: 8px 6px;
-    font-size: 1em;
-    color: #777;
-    width: 100%;
-    box-sizing: border-box;
-    border: 1px solid #ddd;
-    border-radius: 4px;
-}
 
 .signup-container h2 {
     font-size: 2em;
@@ -36,17 +28,4 @@ label {
     margin-bottom: 6px;
   }
 
-  .signup-btn {
-    background: #fff;
-    padding: 8px 12px;
-    border-radius: 4px;
-    cursor: pointer;
-    font-size: 1em;
-    border: 1px solid #262262;
-    color:#262262;
-  }
-  .signup-btn:hover {
-    color: aliceblue;
-    background-color: #262262;
-  }
 
